--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,85 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+/* eef5ff*/
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+body {
+  background-color: #eef5ff;
+}
+.password-generator {
+  max-width: 400px;
+  background-color: #fff;
+  margin: 50px auto;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+}
+.password-generator h2 {
+  margin-bottom: 20px;
   text-align: center;
+  color: rgb(45, 143, 255);
+  font-weight: 500;
+  font-size: 20px;
+  text-transform: uppercase;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.input-group,
+.checkbox-group,
+.generated-password {
+  margin-bottom: 15px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+.checkbox-group {
+  display: flex;
+  align-items: center;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.checkbox-group input {
+  margin-right: 10px;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input-group label {
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+input[type="number"] {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
 }
-
-.card {
-  padding: 2em;
+#generate {
+  padding: 10px 20px;
+  background-color: rgb(45, 143, 255);
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
-
-.read-the-docs {
-  color: #888;
+#generate:hover {
+  background-color: rgb(9, 124, 255);
+}
+.generated-password {
+  margin-top: 10px;
+  display: flex;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  overflow: hidden;
+}
+input[type="text"] {
+  flex: 1;
+  border: none;
+  padding: 10px;
+}
+.copy-btn {
+  border: none;
+  padding: 5px;
+  background-color: rgb(39, 152, 50);
+  color: #fff;
+}
+input[type="checkbox"] {
+  width: 15px;
+  height: 15px;
 }
